force-app/main/default/objects/KimbleOne__ApproverType__c/KimbleOne__ApproverType__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Approver Type</label>
    <nameField>
        <label>Approver Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApproverType</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>