force-app/main/default/objects/KimbleOne__ApproverType__c/fields/KimbleOne__ValidForAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ValidForAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid For Account</label>
    <type>Checkbox</type>
</CustomField>