force-app/main/default/objects/KimbleOne__ApproverType__c/fields/KimbleOne__ValidForDeliveryElement__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ValidForDeliveryElement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid For Delivery Element</label>
    <type>Checkbox</type>
</CustomField>