force-app/main/default/objects/KimbleOne__ApproverType__c/fields/KimbleOne__ValidForDeliveryResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ValidForDeliveryResourcedActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid For Delivery Resourced Activity</label>
    <type>Checkbox</type>
</CustomField>