force-app/main/default/objects/KimbleOne__ApproverType__c/fields/KimbleOne__ValidForOtherResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ValidForOtherResourcedActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid For Other Resourced Activity</label>
    <type>Checkbox</type>
</CustomField>