force-app/main/default/objects/KimbleOne__ApproverType__c/fields/KimbleOne__ValidForSalesResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ValidForSalesResourcedActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid For Sales Resourced Activity</label>
    <type>Checkbox</type>
</CustomField>